@@ -1,3 +1,4 @@
+    2022/10/09: Issue 5: invalid 'random' (interval is empty): check before crash.
     2022/10/08: moved quest item lists out of code and into database for server customizations
     2022/10/05: quest ui checks
     2022/10/04: checks for valid math.random(), less frequent cottage tree and bush growth (abms), ui adjustments 
